fix: get data
