# backend/internal/adapter/http/route/note.go
@@ -18,13 +18,13 @@ func NewNoteRoute(handler port.NoteHandler, middleware port.Middleware) NoteRout
 	}
 }
 
-func (h *NoteRoute) Route(app *fiber.App) {
+func (r *NoteRoute) Route(app *fiber.App) {
 	api := app.Group("/api")
 
 	v1 := api.Group("/v1/notes")
-	v1.Post("/", h.middleware.Auth(), h.handler.Create)
-	v1.Get("/", h.handler.GetAll)
-	v1.Get("/:id", h.handler.GetByID)
-	v1.Put("/:id", h.middleware.Auth(), h.handler.Update)
-	v1.Delete("/:id", h.middleware.Auth(), h.handler.Delete)
+	v1.Post("/", r.middleware.Auth(), r.handler.Create)
+	v1.Get("/", r.handler.GetAll)
+	v1.Get("/:id", r.handler.GetByID)
+	v1.Put("/:id", r.middleware.Auth(), r.handler.Update)
+	v1.Delete("/:id", r.middleware.Auth(), r.handler.Delete)
 }
